models/KimiK2.6/gke-inference-gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kimi-k2-routing
  namespace: default
spec:
  parentRefs:
  - name: kimi-inference-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: precise-prefix-cache-routing
      group: "inference.networking.k8s.io"
      kind: InferencePool
